zoom idが存在しない場合のエラーハンドリング

--- a/system/static/css/styles.css
+++ b/system/static/css/styles.css
@@ -263,6 +263,11 @@ body {
   padding: 20px;
 }
 
+#error-message {
+  color: red;
+  font-weight: bold;
+}
+
 #video-position {
   align: center;
   margin: auto;
