--- a/system/static/css/styles.css
+++ b/system/static/css/styles.css
@@ -47,6 +47,10 @@ body {
   color: rgb(12, 75, 126);
 }
 
+.current {
+  background-color: rgb(24, 100, 161);
+}
+
 /* footer.html */
 #footer {
   justify-content: center;
