--- a/system/templates/html/header.html
+++ b/system/templates/html/header.html
@@ -6,14 +6,14 @@
     <a href="/"><img src="/static/images/meltice-logo-white.png"></a>
   </div>
   <div>
-    <ul>
+    <ul id="links">
       <li onclick="location.href='/'">トップ</li>
-      <li onclick="location.href='/news'">ニュース登録</li>
-      <li onclick="location.href='/enquete'">アンケート</li>
-      <li onclick="location.href='/room'">ルーム参加登録</li>
-      <li onclick="location.href='/suggestion'">話題提示</li>
-      <li onclick="location.href='/computing'">評価計算</li>
-      <li onclick="location.href='/analysis'">評価閲覧</li>
+      <li :class="navPoint('/news')" onclick="location.href='/news'">ニュース登録</li>
+      <li :class="navPoint('/enquete')" onclick="location.href='/enquete'">アンケート</li>
+      <li :class="navPoint('/room')" onclick="location.href='/room'">ルーム参加登録</li>
+      <li :class="navPoint('/suggestion')" onclick="location.href='/suggestion'">話題提示</li>
+      <li :class="navPoint('/computing')" onclick="location.href='/computing'">評価計算</li>
+      <li :class="navPoint('/analysis')" onclick="location.href='/analysis'">評価閲覧</li>
     </ul>
   </div>
 </div>
