fix: indexページのボタンの改修

--- a/system/templates/index.html
+++ b/system/templates/index.html
@@ -51,15 +51,9 @@
                   「デバイスが使える」というオンラインならではの利点を活用し、円滑なコミュニケーションの機会を「オンラインアイスブレイク」という新たな形で提供します。MelticeならオンラインのCXがオフラインを凌駕する世界を実現できます。
                 </p>
                 <div>
-                  <div id="demo-button" onclick="location.href='/'">
-                    デモで体験する
-                  </div>
-                  <div id="trial-button" onclick="location.href='/'">
-                    無料トライアル
-                  </div>
 
                   <v-btn
-                    class="font-weight-bold"
+                    class="demo-button"
                     style="font-size: 20px"
                     dark
                     color="rgb(12, 75, 126)"
@@ -73,7 +67,7 @@
                     デモで体験する
                   </v-btn>
                   <v-btn
-                    class="font-weight-bold"
+                    class="trial-button"
                     style="font-size: 20px"
                     rounded
                     outlined
@@ -86,6 +80,8 @@
                   >
                     無料トライアル
                   </v-btn>
+                  </div>
+                  
                 </div>
               </div>
               <div id="video">
@@ -115,46 +111,15 @@
     </script>
   </body>
 </html>
-<!-- <style scoped>
+<style scoped>
   .demo-button {
-    margin: 10px;
     font-weight: bold;
-    font-size: 20px;
-    background-color: rgb(12, 75, 126);
-    border-color: rgb(12, 75, 126);
     border-radius: 40px;
     border-width: 3px;
-    width: 200px;
-    text-align: center;
-    padding: 20px;
-    border-style: solid;
-    display: inline-block;
-    color: white;
   }
-
-  .demo-button:hover {
-    background-color: white;
-    border-color: rgb(12, 75, 126);
-  }
-
   .trial-button {
-    margin: 10px;
     font-weight: bold;
-    font-size: 20px;
-    background-color: white;
-    border-color: rgb(12, 75, 126);
     border-radius: 40px;
     border-width: 3px;
-    width: 200px;
-    text-align: center;
-    padding: 20px;
-    border-style: solid;
-    display: inline-block;
-    color: rgb(12, 75, 126);
   }
-
-  .trial-button:hover {
-    background-color: rgb(12, 75, 126);
-    color: white;
-  }
-</style> -->
+</style>
