--- a/system/templates/index.html
+++ b/system/templates/index.html
@@ -36,9 +36,9 @@
   <body>
     <div id="app">
       <v-app>
-        <!-- TODO:VuetifyとCSSのStyleが競合し、HeaderとFotterのレイアウトが崩れてしまう -->
-        [% include "html/header.html" %]
         <v-content>
+          <!-- TODO:Vuetifyのreset cssと既存のCSSのStyleが競合し、HeaderとFotterのレイアウトが崩れてしまう -->
+          <div id="header">[% include "html/header.html" %]</div>
           <v-container>
             <div id="front-page">
               <div id="front-eyecatch">
@@ -101,14 +101,12 @@
     <script>
       new Vue({
         el: "#app",
-        vuetify: new Vuetify({
-          theme: {},
-        }),
+        vuetify: new Vuetify({}),
       });
     </script>
   </body>
 </html>
-<style scoped>
+<style lang="scss" scoped>
   .demo-button {
     font-weight: bold;
     border-radius: 40px;
