--- a/system/templates/suggestion.html
+++ b/system/templates/suggestion.html
@@ -10,7 +10,11 @@
   <body>
     [% include "html/header.html" %]
     <div id="suggestion">
-      <h2>zoom idを入力してください: <input type="text" placeholder="xxx xxxx xxxx" v-model="zoom_id"></h2>
+      <h2>Zoom Meeting IDを入力してください</h2>
+      <span>
+        <input class="balloon" id="zoom_text_style" type="text" v-model="zoom_id" placeholder="xxx xxxx xxxx" autofocus maxlength="11" /><label for="zoom_text_style">Zoom ID</label>
+      </span>
+      <br><!-- 改行 （横に並んでしまったので追加） -->
       <div id="demo-button" @click="newsSet">
         会話を開始する
       </div>
