お問い合わせページ作成

--- a/system/templates/html/header.html
+++ b/system/templates/html/header.html
@@ -14,6 +14,7 @@
       <li :class="navPoint('/suggestion')" onclick="location.href='/suggestion'">話題提示</li>
       <li :class="navPoint('/computing')" onclick="location.href='/computing'">評価計算</li>
       <li :class="navPoint('/analysis')" onclick="location.href='/analysis'">評価閲覧</li>
+      <li :class="navPoint('/contact')" onclick="location.href='/contact'">お問い合わせ</li>
     </ul>
   </div>
 </div>
