--- a/system/templates/enquete.html
+++ b/system/templates/enquete.html
@@ -10,16 +10,26 @@
   <body>
     [% include "html/header.html" %]
     <div id="enquete">
-      <h2>名前を入力してください<!-- <input type="text" v-model="name" placeholder="名前"> --></h2>
+      <h2>Zoom Meeting IDを入力してください</h2>
       <span>
-        <input class="balloon" id="name_text_style" type="text" v-model="name" placeholder="your name" autofocus /><label for="name_text_style">名前</label>
+        <input class="balloon" id="zoom_text_style" type="text" v-model="zoom_id" placeholder="xxx xxxx xxxx" autofocus maxlength="11" /><label for="zoom_text_style">Zoom ID</label>
       </span>
-      <h2 v-model="newsQuestion">興味があるニュースページを選んでください</h2>
-      <div id="wanted-news-list-wrapper">
-        <wanted-news-list v-for="news in news_list" :key="news.news_id" :news="news" @is_wanted="(is_wanted) => news.is_wanted=is_wanted"></wanted-news-list>
+      <br>
+      <div id="demo-button" @click="newsQuestion">
+        zoom idを送信
       </div>
-      <div id="demo-button" @click="degreeSave">
-        送信
+      <div v-if="news_list.length > 0">
+        <h2>名前を入力してください<!-- <input type="text" v-model="name" placeholder="名前"> --></h2>
+        <span>
+          <input class="balloon" id="name_text_style" type="text" v-model="name" placeholder="your name" autofocus /><label for="name_text_style">名前</label>
+        </span>
+        <h2 v-model="newsQuestion">興味があるニュースページを選んでください</h2>
+        <div id="wanted-news-list-wrapper">
+          <wanted-news-list v-for="news in news_list" :key="news.news_id" :news="news" @is_wanted="(is_wanted) => news.is_wanted=is_wanted"></wanted-news-list>
+        </div>
+        <div id="demo-button" @click="degreeSave">
+          送信
+        </div>
       </div>
     </div>
     [% include "html/footer.html" %]
