--- a/system/templates/index.html
+++ b/system/templates/index.html
@@ -42,53 +42,57 @@
           <v-container>
             <div id="front-page">
               <div id="front-eyecatch">
-                <h1>
-                  オンラインのアイスブレイクツールなら<img
-                    src="[[ url_for('static', filename='images/meltice-logo-dark.png') ]]"
-                  />
-                </h1>
-                <p>
-                  「デバイスが使える」というオンラインならではの利点を活用し、円滑なコミュニケーションの機会を「オンラインアイスブレイク」という新たな形で提供します。MelticeならオンラインのCXがオフラインを凌駕する世界を実現できます。
-                </p>
-                <div>
-                  <v-btn
-                    class="demo-button"
-                    style="font-size: 20px"
-                    dark
-                    color="rgb(12, 75, 126)"
-                    rounded
-                    height="80"
-                    width="200"
-                    elevation="0"
-                    onclick="location.href='/'"
-                    :ripple="{ center: false, class: 'blue--text' }"
-                  >
-                    デモで体験する
-                  </v-btn>
-                  <v-btn
-                    class="trial-button"
-                    style="font-size: 20px"
-                    rounded
-                    outlined
-                    height="80"
-                    width="200"
-                    color="rgb( 12,  75, 126)"
-                    elevation="0"
-                    onclick="location.href='/'"
-                    :ripple="{ center: false, class: 'blue--text' }"
-                  >
-                    無料トライアル
-                  </v-btn>
-                </div>
+                <v-row>
+                  <v-col>
+                    <h1>
+                      オンラインのアイスブレイクツールなら<img
+                        src="[[ url_for('static', filename='images/meltice-logo-dark.png') ]]"
+                      />
+                    </h1>
+                    <p>
+                      「デバイスが使える」というオンラインならではの利点を活用し、円滑なコミュニケーションの機会を「オンラインアイスブレイク」という新たな形で提供します。MelticeならオンラインのCXがオフラインを凌駕する世界を実現できます。
+                    </p>
+                    <v-spacer />
+                    <v-btn
+                      class="demo-button"
+                      style="font-size: 20px"
+                      dark
+                      color="rgb(12, 75, 126)"
+                      rounded
+                      height="80"
+                      width="200"
+                      elevation="0"
+                      onclick="location.href='/'"
+                      :ripple="{ center: false, class: 'blue--text' }"
+                    >
+                      デモで体験する
+                    </v-btn>
+                    <v-btn
+                      class="trial-button"
+                      style="font-size: 20px"
+                      rounded
+                      outlined
+                      height="80"
+                      width="200"
+                      color="rgb( 12,  75, 126)"
+                      elevation="0"
+                      onclick="location.href='/'"
+                      :ripple="{ center: false, class: 'blue--text' }"
+                    >
+                      無料トライアル
+                    </v-btn> </v-col
+                  ><v-col>
+                    <div id="video">
+                      <video
+                        src="[[ url_for('static', filename='images/meltice-video.mp4') ]]"
+                        autoplay
+                        muted
+                        loop
+                      ></video>
+                    </div>
+                  </v-col>
+                </v-row>
               </div>
-            </div>
-            <div id="video">
-              <video
-                src="[[ url_for('static', filename='images/meltice-video.mp4') ]]"
-                autoplay
-                muted
-                loop
-              ></video>
             </div>
           </v-container>
         </v-content>
