--- a/system/templates/enquete.html
+++ b/system/templates/enquete.html
@@ -4,21 +4,73 @@
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script async src="[[ url_for('static', filename='js/app.js') ]]"></script>
     <link rel="stylesheet" href="[[ url_for('static', filename='css/styles.css') ]]"></script>
-    <link rel="icon" type="image/x-icon" href="[[ url_for('static', filename='images/favicon.png') ]]">
+    <link rel="icon" type="image/x-icon" href="[[ url_for('static', filename='images/favicon.png') ]]"  />
+    <link
+      href="https://cdn.jsdelivr.net/npm/@mdi/font@6.x/css/materialdesignicons.min.css"
+      rel="stylesheet"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.min.css"
+      rel="stylesheet"
+    />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui"
+    />
     <title>ニュースのアンケート - オンラインのアイスブレイクツールならMeltice</title>
   </head>
   <body>
-    [% include "html/header.html" %]
+    <!-- TODO:Vuetifyのreset cssと既存のCSSのStyleが競合し、HeaderとFotterのレイアウトが崩れてしまう -->
+    <div id="header">[% include "html/header.html" %]</div>
+    <div id="app">
+      <v-app>
+        <v-main>
+    <v-container>
     <div id="enquete">
       <h2>名前を入力してください: <input type="text" v-model="name" placeholder="名前"></h2>
       <h2 v-model="newsQuestion">興味があるニュースページを選んでください</h2>
       <div id="wanted-news-list-wrapper">
         <wanted-news-list v-for="news in news_list" :key="news.news_id" :news="news" @is_wanted="(is_wanted) => news.is_wanted=is_wanted"></wanted-news-list>
       </div>
-      <div id="demo-button" @click="degreeSave">
+        <v-btn
+        class="trial-button"
+        style="font-size: 20px"
+        rounded
+        outlined
+        height="80"
+        width="200"
+        color="rgb( 12,  75, 126)"
+        elevation="0"
+        @click="degreeSave"
+      >
         送信
-      </div>
+      </v-btn>
     </div>
-    [% include "html/footer.html" %]
-  </body>
+  </v-container>
+</v-main>
+[% include "html/footer.html" %]
+</v-app>
+</div>
+
+<script src="https://cdn.jsdelivr.net/npm/vue@2.x/dist/vue.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.js"></script>
+<script>
+new Vue({
+el: "#app",
+vuetify: new Vuetify({}),
+});
+</script>
+</body>
 </html>
+<style lang="scss" scoped>
+.demo-button {
+font-weight: bold;
+border-radius: 40px;
+border-width: 3px;
+}
+.trial-button {
+font-weight: bold;
+border-radius: 40px;
+border-width: 3px;
+}
+</style>
