--- a/system/templates/computing.html
+++ b/system/templates/computing.html
@@ -3,9 +3,16 @@
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script async src="[[ url_for('static', filename='js/app.js') ]]"></script>
-    <link rel="stylesheet" href="[[ url_for('static', filename='css/styles.css') ]]"></script>
-    <link rel="icon" type="image/x-icon" href="[[ url_for('static', filename='images/favicon.png') ]]" />
-        
+    <link
+      rel="stylesheet"
+      href="[[ url_for('static', filename='css/styles.css') ]]"
+    />
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="[[ url_for('static', filename='images/favicon.png') ]]"
+    />
+
     <link
       href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900"
       rel="stylesheet"
@@ -32,98 +39,125 @@
           <!-- TODO:Vuetifyのreset cssと既存のCSSのStyleが競合し、HeaderとFotterのレイアウトが崩れてしまう -->
           <div id="header">[% include "html/header.html" %]</div>
           <v-container>
-    <div id="computing">
-      <div id="error-message">
-        {{ errorMessage }}
-      </div>
-      <div>
-        <h2>zoom idを入力してください: <input type="text" v-model="zoom_id" placeholder="xxx xxxx xxxx"></h2>
-        <br><!-- 改行 （横に並んでしまったので追加） -->
-        <v-btn
-        class="demo-button"
-        style="font-size: 20px"
-        dark
-        color="rgb(12, 75, 126)"
-        rounded
-        height="80"
-        width="200"
-        elevation="0"
-        @click="namesSet"
-      >
-      zoom idを送信
-      </v-btn>
-      </div>
-      <div v-if="names.length > 0">
-        <p>zoom idを送信できました</p>
-        <h2>動画と音声をアップロードしてください</h2>
-        <form method="post" enctype="multipart/form-data">
-          <div>
-            <p>どこに誰が写っていますか？:</p>
-              <table id="video-position">
-                <tbody>
-                  <tr><td class="video-position-left" :rowspan="post_names.length">ニュース画面</td>
-                      <td class="video-position-right">1</td></tr>
-                  <tr><td class="video-position-right">2</td></tr>
-                  <tr><td class="video-position-right">3</td></tr>
-                  <tr><td class="video-position-right">4</td></tr>
-                </tbody>
-              </table>
-            <ul id="video-position-list">
-              <li v-for="ix in 4" :key="ix"> {{ ix }}:
-                <select v-model="post_names[ix]">
-                  <option v-for="name in names" :value="name">{{ name }}</option>
-                </select>
-              </li>
-            </ul>
-          </div>
-          <div>
-            映像: <input type="file" @change="movieSet" accept="video/mp4">
-          </div>
-          <div v-for="(name, ix) in names" :key="ix">
-            音声({{ name }}): <input type="file" @change="(event) => soundSet(event, name)" accept="audio/x-m4a">
-          </div>
-          <v-btn
-          class="demo-button"
-          style="font-size: 20px"
-          dark
-          color="rgb(12, 75, 126)"
-          rounded
-          height="80"
-          width="200"
-          elevation="0"
-          @click="movieSoundUpload"
-          :ripple="{ center: false, class: 'blue--text' }"
-        >
-        アップロードする
-        </v-btn>
-        </form>
-      </div>
+            <div id="computing">
+              <div id="error-message">{{ errorMessage }}</div>
+              <div>
+                <h2>
+                  zoom idを入力してください:
+                  <input
+                    type="text"
+                    v-model="zoom_id"
+                    placeholder="xxx xxxx xxxx"
+                  />
+                </h2>
+                <br /><!-- 改行 （横に並んでしまったので追加） -->
+                <v-btn
+                  class="demo-button"
+                  style="font-size: 20px"
+                  dark
+                  color="rgb(12, 75, 126)"
+                  rounded
+                  height="80"
+                  width="200"
+                  elevation="0"
+                  onclick="namesSet"
+                >
+                  zoom idを送信
+                </v-btn>
+              </div>
+              <div v-if="names.length > 0">
+                <p>zoom idを送信できました</p>
+                <h2>動画と音声をアップロードしてください</h2>
+                <form method="post" enctype="multipart/form-data">
+                  <div>
+                    <p>どこに誰が写っていますか？:</p>
+                    <table id="video-position">
+                      <tbody>
+                        <tr>
+                          <td
+                            class="video-position-left"
+                            :rowspan="post_names.length"
+                          >
+                            ニュース画面
+                          </td>
+                          <td class="video-position-right">1</td>
+                        </tr>
+                        <tr>
+                          <td class="video-position-right">2</td>
+                        </tr>
+                        <tr>
+                          <td class="video-position-right">3</td>
+                        </tr>
+                        <tr>
+                          <td class="video-position-right">4</td>
+                        </tr>
+                      </tbody>
+                    </table>
+                    <ul id="video-position-list">
+                      <li v-for="ix in 4" :key="ix">
+                        {{ ix }}:
+                        <select v-model="post_names[ix]">
+                          <option v-for="name in names" :value="name">
+                            {{ name }}
+                          </option>
+                        </select>
+                      </li>
+                    </ul>
+                  </div>
+                  <div>
+                    映像:
+                    <input type="file" @change="movieSet" accept="video/mp4" />
+                  </div>
+                  <div v-for="(name, ix) in names" :key="ix">
+                    音声({{ name }}):
+                    <input
+                      type="file"
+                      @change="(event) => soundSet(event, name)"
+                      accept="audio/x-m4a"
+                    />
+                  </div>
+                  <v-btn
+                    class="demo-button"
+                    style="font-size: 20px"
+                    dark
+                    color="rgb(12, 75, 126)"
+                    rounded
+                    height="80"
+                    width="200"
+                    elevation="0"
+                    @click="movieSoundUpload"
+                    :ripple="{ center: false, class: 'blue--text' }"
+                  >
+                    アップロードする
+                  </v-btn>
+                </form>
+              </div>
+            </div>
+          </v-container>
+        </v-main>
+        [% include "html/footer.html" %]
+      </v-app>
     </div>
-  </v-container>
-</v-main>
-[% include "html/footer.html" %]
-</v-app>
-</div>
 
-<script src="https://cdn.jsdelivr.net/npm/vue@2.x/dist/vue.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.js"></script>
-<script>
-new Vue({
-el: "#app",
-vuetify: new Vuetify({}),
-});
-</script>
-</body>
+    <script src="https://cdn.jsdelivr.net/npm/vue@2.x/dist/vue.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.js"></script>
+    <script>
+      new Vue({
+        el: "#app",
+        vuetify: new Vuetify({}),
+      });
+    </script>
+  </body>
 </html>
 <style lang="scss" scoped>
-.demo-button {
-font-weight: bold;
-border-radius: 40px;
-border-width: 3px;
-}
-.trial-button {
-font-weight: bold;
-border-radius: 40px;
-border-width: 3px;
-}
+  .demo-button {
+    font-weight: bold;
+    border-radius: 40px;
+    border-width: 3px;
+  }
+  .trial-button {
+    font-weight: bold;
+    border-radius: 40px;
+    border-width: 3px;
+  }
 </style>
