--- a/system/templates/analysis.html
+++ b/system/templates/analysis.html
@@ -4,9 +4,16 @@
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script async src="[[ url_for('static', filename='js/app.js') ]]"></script>
-    <link rel="stylesheet" href="[[ url_for('static', filename='css/styles.css') ]]"></script>
-    <link rel="icon" type="image/x-icon" href="[[ url_for('static', filename='images/favicon.png') ]]" />
-            
+    <link
+      rel="stylesheet"
+      href="[[ url_for('static', filename='css/styles.css') ]]"
+    />
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="[[ url_for('static', filename='images/favicon.png') ]]"
+    />
+
     <link
       href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900"
       rel="stylesheet"
@@ -33,60 +40,69 @@
           <!-- TODO:Vuetifyのreset cssと既存のCSSのStyleが競合し、HeaderとFotterのレイアウトが崩れてしまう -->
           <div id="header">[% include "html/header.html" %]</div>
           <v-container>
-    <div id="analysis">
-      <div>
-        <h2>Zoom Meeting IDを入力してください<!-- <input type="text" v-model="zoom_id" placeholder="xxx xxxx xxxx"> --></h2>
-      </div>
-      <br><!-- 改行 （横に並んでしまったので追加） -->
-      <v-btn
-      class="demo-button"
-      style="font-size: 20px"
-      dark
-      color="rgb(12, 75, 126)"
-      rounded
-      height="80"
-      width="200"
-      elevation="0"
-      @click="evaluationSet"
-    >
-    参加者を見る
-    </v-btn>
-      <div v-if="names.length > 0" id="evaluation-content">
-        <select v-model="particular_name">
-          <option v-for="name in names" :value="name">{{ name }}</option>
-        </select>
-        <h2>{{ particular_name }}</h2>
-        <div id="emotion-chart-wrapper"><canvas id="emotion-chart"></canvas></div>
-        <div v-if="particular_name.length > 0" v-model="evaluationDisplay(particular_name)">
-          <img :src="speaking_im_b64">
-        </div>
-      </div>
+            <div id="analysis">
+              <div>
+                <h2>
+                  Zoom Meeting IDを入力してください<!-- <input type="text" v-model="zoom_id" placeholder="xxx xxxx xxxx"> -->
+                </h2>
+              </div>
+              <br /><!-- 改行 （横に並んでしまったので追加） -->
+              <v-btn
+                class="demo-button"
+                style="font-size: 20px"
+                dark
+                color="rgb(12, 75, 126)"
+                rounded
+                height="80"
+                width="200"
+                elevation="0"
+                onclick="evaluationSet"
+              >
+                参加者を見る
+              </v-btn>
+              <div v-if="names.length > 0" id="evaluation-content">
+                <select v-model="particular_name">
+                  <option v-for="name in names" :value="name">
+                    {{ name }}
+                  </option>
+                </select>
+                <h2>{{ particular_name }}</h2>
+                <div id="emotion-chart-wrapper">
+                  <canvas id="emotion-chart"></canvas>
+                </div>
+                <div
+                  v-if="particular_name.length > 0"
+                  v-model="evaluationDisplay(particular_name)"
+                >
+                  <img :src="speaking_im_b64" />
+                </div>
+              </div>
+            </div>
+          </v-container>
+        </v-main>
+        [% include "html/footer.html" %]
+      </v-app>
     </div>
-  </v-container>
-</v-main>
-[% include "html/footer.html" %]
-</v-app>
-</div>
 
-<script src="https://cdn.jsdelivr.net/npm/vue@2.x/dist/vue.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.js"></script>
-<script>
-new Vue({
-el: "#app",
-vuetify: new Vuetify({}),
-});
-</script>
-</body>
+    <script src="https://cdn.jsdelivr.net/npm/vue@2.x/dist/vue.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.js"></script>
+    <script>
+      new Vue({
+        el: "#app",
+        vuetify: new Vuetify({}),
+      });
+    </script>
+  </body>
 </html>
 <style lang="scss" scoped>
-.demo-button {
-font-weight: bold;
-border-radius: 40px;
-border-width: 3px;
-}
-.trial-button {
-font-weight: bold;
-border-radius: 40px;
-border-width: 3px;
-}
+  .demo-button {
+    font-weight: bold;
+    border-radius: 40px;
+    border-width: 3px;
+  }
+  .trial-button {
+    font-weight: bold;
+    border-radius: 40px;
+    border-width: 3px;
+  }
 </style>
