--- a/system/templates/enquete.html
+++ b/system/templates/enquete.html
@@ -3,8 +3,19 @@
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script async src="[[ url_for('static', filename='js/app.js') ]]"></script>
-    <link rel="stylesheet" href="[[ url_for('static', filename='css/styles.css') ]]"></script>
-    <link rel="icon" type="image/x-icon" href="[[ url_for('static', filename='images/favicon.png') ]]"  />
+    <link
+      rel="stylesheet"
+      href="[[ url_for('static', filename='css/styles.css') ]]"
+    />
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="[[ url_for('static', filename='images/favicon.png') ]]"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900"
+      rel="stylesheet"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/@mdi/font@6.x/css/materialdesignicons.min.css"
       rel="stylesheet"
@@ -17,7 +28,9 @@
       name="viewport"
       content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui"
     />
-    <title>ニュースのアンケート - オンラインのアイスブレイクツールならMeltice</title>
+    <title>
+      ニュースのアンケート - オンラインのアイスブレイクツールならMeltice
+    </title>
   </head>
   <body>
     <!-- TODO:Vuetifyのreset cssと既存のCSSのStyleが競合し、HeaderとFotterのレイアウトが崩れてしまう -->
@@ -25,55 +38,71 @@
     <div id="app">
       <v-app>
         <v-main>
-    <v-container>
-    <div id="enquete">
-      <h2>名前を入力してください<!-- <input type="text" v-model="name" placeholder="名前"> --></h2>
-      <span>
-        <input class="balloon" id="name_text_style" type="text" v-model="name" placeholder="your name" autofocus /><label for="name_text_style">名前</label>
-      </span>
-      <h2 v-model="newsQuestion">興味があるニュースページを選んでください</h2>
-      <div id="wanted-news-list-wrapper">
-        <wanted-news-list v-for="news in news_list" :key="news.news_id" :news="news" @is_wanted="(is_wanted) => news.is_wanted=is_wanted"></wanted-news-list>
-      </div>
-        <v-btn
-        class="trial-button"
-        style="font-size: 20px"
-        rounded
-        outlined
-        height="80"
-        width="200"
-        color="rgb( 12,  75, 126)"
-        elevation="0"
-        @click="degreeSave"
-      >
-        送信
-      </v-btn>
+          <v-container>
+            <div id="enquete">
+              <h2>
+                名前を入力してください<!-- <input type="text" v-model="name" placeholder="名前"> -->
+              </h2>
+              <span>
+                <input
+                  class="balloon"
+                  id="name_text_style"
+                  type="text"
+                  v-model="name"
+                  placeholder="your name"
+                  autofocus
+                /><label for="name_text_style">名前</label>
+              </span>
+              <h2 v-model="newsQuestion">
+                興味があるニュースページを選んでください
+              </h2>
+              <div id="wanted-news-list-wrapper">
+                <wanted-news-list
+                  v-for="news in news_list"
+                  :key="news.news_id"
+                  :news="news"
+                  @is_wanted="(is_wanted) => news.is_wanted=is_wanted"
+                ></wanted-news-list>
+              </div>
+              <v-btn
+                class="trial-button"
+                style="font-size: 20px"
+                rounded
+                outlined
+                height="80"
+                width="200"
+                color="rgb( 12,  75, 126)"
+                elevation="0"
+                onclick="degreeSave"
+              >
+                送信
+              </v-btn>
+            </div>
+          </v-container>
+        </v-main>
+        [% include "html/footer.html" %]
+      </v-app>
     </div>
-  </v-container>
-</v-main>
-[% include "html/footer.html" %]
-</v-app>
-</div>
 
-<script src="https://cdn.jsdelivr.net/npm/vue@2.x/dist/vue.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.js"></script>
-<script>
-new Vue({
-el: "#app",
-vuetify: new Vuetify({}),
-});
-</script>
-</body>
+    <script src="https://cdn.jsdelivr.net/npm/vue@2.x/dist/vue.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.js"></script>
+    <script>
+      new Vue({
+        el: "#app",
+        vuetify: new Vuetify({}),
+      });
+    </script>
+  </body>
 </html>
 <style lang="scss" scoped>
-.demo-button {
-font-weight: bold;
-border-radius: 40px;
-border-width: 3px;
-}
-.trial-button {
-font-weight: bold;
-border-radius: 40px;
-border-width: 3px;
-}
+  .demo-button {
+    font-weight: bold;
+    border-radius: 40px;
+    border-width: 3px;
+  }
+  .trial-button {
+    font-weight: bold;
+    border-radius: 40px;
+    border-width: 3px;
+  }
 </style>
