--- a/system/templates/room.html
+++ b/system/templates/room.html
@@ -3,8 +3,15 @@
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script async src="[[ url_for('static', filename='js/app.js') ]]"></script>
-    <link rel="stylesheet" href="[[ url_for('static', filename='css/styles.css') ]]"></script>
-    <link rel="icon" type="image/x-icon" href="[[ url_for('static', filename='images/favicon.png') ]]"    />
+    <link
+      rel="stylesheet"
+      href="[[ url_for('static', filename='css/styles.css') ]]"
+    />
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="[[ url_for('static', filename='images/favicon.png') ]]"
+    />
 
     <link
       href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900"
@@ -26,55 +33,65 @@
     <title>ルーム参加登録 - オンラインのアイスブレイクツールならMeltice</title>
   </head>
   <body>
-  <div id="app">
-    <v-app>
-      <v-main>
-        <!-- TODO:Vuetifyのreset cssと既存のCSSのStyleが競合し、HeaderとFotterのレイアウトが崩れてしまう -->
-        <div id="header">[% include "html/header.html" %]</div>
-        <v-container>
-    <div id="room">
-      <h2>名前を入力してください: <input type="text" v-model="name" placeholder="名前"></h2>
-      <h2>zoom idを入力してください: <input type="text" v-model="zoom_id" placeholder="xxx xxxx xxxx"></h2>
-      <br><!-- 改行 （横に並んでしまったので追加） -->
-      <v-btn
-      class="demo-button"
-      style="font-size: 20px"
-      dark
-      color="rgb(12, 75, 126)"
-      rounded
-      height="80"
-      width="200"
-      elevation="0"
-      @click="roomSet"
-    >
-    会話を開始する
-    </v-btn>
+    <div id="app">
+      <v-app>
+        <v-main>
+          <!-- TODO:Vuetifyのreset cssと既存のCSSのStyleが競合し、HeaderとFotterのレイアウトが崩れてしまう -->
+          <div id="header">[% include "html/header.html" %]</div>
+          <v-container>
+            <div id="room">
+              <h2>
+                名前を入力してください:
+                <input type="text" v-model="name" placeholder="名前" />
+              </h2>
+              <h2>
+                zoom idを入力してください:
+                <input
+                  type="text"
+                  v-model="zoom_id"
+                  placeholder="xxx xxxx xxxx"
+                />
+              </h2>
+              <br /><!-- 改行 （横に並んでしまったので追加） -->
+              <v-btn
+                class="demo-button"
+                style="font-size: 20px"
+                dark
+                color="rgb(12, 75, 126)"
+                rounded
+                height="80"
+                width="200"
+                elevation="0"
+                onclick="roomSet"
+              >
+                会話を開始する
+              </v-btn>
+            </div>
+          </v-container>
+        </v-main>
+        [% include "html/footer.html" %]
+      </v-app>
     </div>
-  </v-container>
-</v-main>
-[% include "html/footer.html" %]
-</v-app>
-</div>
 
-<script src="https://cdn.jsdelivr.net/npm/vue@2.x/dist/vue.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.js"></script>
-<script>
-new Vue({
-el: "#app",
-vuetify: new Vuetify({}),
-});
-</script>
-</body>
+    <script src="https://cdn.jsdelivr.net/npm/vue@2.x/dist/vue.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.js"></script>
+    <script>
+      new Vue({
+        el: "#app",
+        vuetify: new Vuetify({}),
+      });
+    </script>
+  </body>
 </html>
 <style lang="scss" scoped>
-.demo-button {
-font-weight: bold;
-border-radius: 40px;
-border-width: 3px;
-}
-.trial-button {
-font-weight: bold;
-border-radius: 40px;
-border-width: 3px;
-}
+  .demo-button {
+    font-weight: bold;
+    border-radius: 40px;
+    border-width: 3px;
+  }
+  .trial-button {
+    font-weight: bold;
+    border-radius: 40px;
+    border-width: 3px;
+  }
 </style>
