--- a/system/templates/suggestion.html
+++ b/system/templates/suggestion.html
@@ -3,9 +3,16 @@
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script async src="[[ url_for('static', filename='js/app.js') ]]"></script>
-    <link rel="stylesheet" href="[[ url_for('static', filename='css/styles.css') ]]"></script>
-    <link rel="icon" type="image/x-icon" href="[[ url_for('static', filename='images/favicon.png') ]]" />
-    
+    <link
+      rel="stylesheet"
+      href="[[ url_for('static', filename='css/styles.css') ]]"
+    />
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="[[ url_for('static', filename='images/favicon.png') ]]"
+    />
+
     <link
       href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900"
       rel="stylesheet"
@@ -23,7 +30,9 @@
       content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui"
     />
 
-    <title>ニュースの話題提示 - オンラインのアイスブレイクツールならMeltice</title>
+    <title>
+      ニュースの話題提示 - オンラインのアイスブレイクツールならMeltice
+    </title>
   </head>
   <body>
     <div id="app">
@@ -32,52 +41,59 @@
           <!-- TODO:Vuetifyのreset cssと既存のCSSのStyleが競合し、HeaderとFotterのレイアウトが崩れてしまう -->
           <div id="header">[% include "html/header.html" %]</div>
           <v-container>
-    <div id="suggestion">
-      <h2>zoom idを入力してください: <input type="text" placeholder="xxx xxxx xxxx" v-model="zoom_id"></h2>
-      <br><!-- 改行 （横に並んでしまったので追加） -->
-      <v-btn
-      class="demo-button"
-      style="font-size: 20px"
-      dark
-      color="rgb(12, 75, 126)"
-      rounded
-      height="80"
-      width="200"
-      elevation="0"
-      @click="newsSet"
-    >
-    会話を開始する
-    </v-btn>
-      <div id="suggested-news" v-if="Object.keys(news).length > 0">
-        <h3>{{ news.title }}</h3>
-        <img :src="news.imgsrc">
-      </div>
+            <div id="suggestion">
+              <h2>
+                zoom idを入力してください:
+                <input
+                  type="text"
+                  placeholder="xxx xxxx xxxx"
+                  v-model="zoom_id"
+                />
+              </h2>
+              <br /><!-- 改行 （横に並んでしまったので追加） -->
+              <v-btn
+                class="demo-button"
+                style="font-size: 20px"
+                dark
+                color="rgb(12, 75, 126)"
+                rounded
+                height="80"
+                width="200"
+                elevation="0"
+                onclick="newsSet"
+              >
+                会話を開始する
+              </v-btn>
+              <div id="suggested-news" v-if="Object.keys(news).length > 0">
+                <h3>{{ news.title }}</h3>
+                <img :src="news.imgsrc" />
+              </div>
+            </div>
+          </v-container>
+        </v-main>
+        [% include "html/footer.html" %]
+      </v-app>
     </div>
-  </v-container>
-</v-main>
-[% include "html/footer.html" %]
-</v-app>
-</div>
 
-<script src="https://cdn.jsdelivr.net/npm/vue@2.x/dist/vue.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.js"></script>
-<script>
-new Vue({
-el: "#app",
-vuetify: new Vuetify({}),
-});
-</script>
-</body>
+    <script src="https://cdn.jsdelivr.net/npm/vue@2.x/dist/vue.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.js"></script>
+    <script>
+      new Vue({
+        el: "#app",
+        vuetify: new Vuetify({}),
+      });
+    </script>
+  </body>
 </html>
 <style lang="scss" scoped>
-.demo-button {
-font-weight: bold;
-border-radius: 40px;
-border-width: 3px;
-}
-.trial-button {
-font-weight: bold;
-border-radius: 40px;
-border-width: 3px;
-}
+  .demo-button {
+    font-weight: bold;
+    border-radius: 40px;
+    border-width: 3px;
+  }
+  .trial-button {
+    font-weight: bold;
+    border-radius: 40px;
+    border-width: 3px;
+  }
 </style>
